<?xml version="1.0" encoding="utf-8"?>
<!-- Menú inferior de navegación -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Sección Espectáculos -->
    <item
        android:id="@+id/espectaculosFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/espectaculos" />

    <!-- Sección Restaurantes -->
    <item
        android:id="@+id/restaurantesFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/restaurantes" />

    <!-- Sección Mapa -->
    <item
        android:id="@+id/mapaFragment"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/mapa" />

    <!-- Sección Favoritos -->
    <item
        android:id="@+id/favoritosFragment"
        android:icon="@android:drawable/btn_star"
        android:title="@string/favoritos" />

    <!-- Sección Ajustes -->
    <item
        android:id="@+id/ajustesFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/ajustes" />

</menu>
