<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:id="@+id/tvHora"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/_11_00"
            android:textStyle="bold"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_espectaculo"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvExtra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_45_min_accesible_s"
                android:textSize="13sp"
                android:layout_marginTop="3dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
